# Fennec

./: .gitignore  .travis.yml  CMakeLists.txt  ContentItemDelegate.cpp  ContentItemDelegate.h  LogEntry.cpp  LogEntry.h  LogModel.cpp  LogModel.h  LogParser.cpp  LogParser.h  LoggerObjectSettings.cpp  LoggerObjectSettings.h  MainWindow.cpp  MainWindow.h  OffsetLogParser.cpp  OffsetLogParser.h  SettingsProvider.cpp  SettingsProvider.h  TailFileWatch.cpp  TailFileWatch.h  WindowsFileWatch.cpp  WindowsFileWatch.h  appveyor.yml  ctest-to-junit.xsl  main.cpp  untitled12.pro  untitled12.pro.user.2fba124  untitled12.pro.user.74dfae2
app/: CMakeLists.txt  app.pro  app.qrc  main.cpp
app/res/: app.rc
cmake/: clang-cxx-dev-tools.cmake
core/: CMakeLists.txt  ContentItemDelegate.cpp  ContentItemDelegate.h  JSONSyntaxHighlighter.cpp  JSONSyntaxHighlighter.h  LogEntry.cpp  LogEntry.h  LogModel.cpp  LogModel.h  LogModelConfig.cpp  LogModelConfig.h  LogModelFactory.cpp  LogModelFactory.h  LogParser.cpp  LogParser.h  LogRowColorizer.cpp  LogRowColorizer.h  LogRowColorizerConfig.cpp  LogRowColorizerConfig.h  LogViewTabManager.cpp  LogViewTabManager.h  LoggerObjectSettings.cpp  LoggerObjectSettings.h  MainWindow.cpp  MainWindow.h  OffsetLogParser.cpp  OffsetLogParser.h  RegexLogParser.cpp  RegexLogParser.h  RegexLogParserConfig.cpp  RegexLogParserConfig.h  RegexLogParserFactory.cpp  RegexLogParserFactory.h  SettingsContainer.cpp  SettingsContainer.h  SettingsDialog.cpp  SettingsDialog.h  SettingsProvider.cpp  SettingsProvider.h  SingleLogSetting.cpp  (+11 more)
test/: LogEntryTest.cpp  LogEntryTest.h  LogModelTest.cpp  LogModelTest.h  main.cpp  test.pro
test/IdentifiableObjectSerializationTest/: CMakeLists.txt  IdentifiableObjectSerializationTest.cpp
test/LogEntryTest/: CMakeLists.txt  LogEntryTest.cpp  LogEntryTest.pro
test/LogModelConfigSerializationTest/: CMakeLists.txt  LogModelConfigSerializationTest.cpp
test/LogModelTest/: CMakeLists.txt  LogModelTest.cpp  LogModelTest.pro
test/LogRowColorizerConfigSerializationTest/: CMakeLists.txt  LogRowColorizerConfigSerializationTest.cpp
test/RegexLogParserConfigSerializationTest/: CMakeLists.txt  RegexLogParserConfigSerializationTest.cpp
test/RegexLogParserTest/: CMakeLists.txt  RegexLogParserTest.cpp  RegexLogParserTest.pro
test/SettingsProviderTest/: CMakeLists.txt  SettingsProviderTest.cpp
test/TailFileWatchConfigSerializationTest/: CMakeLists.txt  TailFileWatchConfigSerializationTest.cpp
util/: ctest_result_converter.py
